Fixed logos position on mobile

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -66,6 +66,48 @@ input, select, textarea {
 	appearance: none;
 }
 
+.logo-container {
+    display: flex;
+    /* flex-wrap: wrap; Allows the items to wrap to the next line */
+	align-items: center;
+    /* justify-content: center; Center the items */
+}
+
+.logo {
+    flex: 1 1 50%; /* Each image takes up 50% of the width, so two images per row */
+    max-width: 100%; /* Ensure images do not overflow their container */
+}
+
+/* Mobile-specific styles */
+@media (max-width: 600px) {
+	.logo-container {
+		display: flex;
+		flex-wrap: wrap;
+		justify-content: center;
+	}
+    .logo {
+        height: auto; /* Adjust height as needed */
+        /* Set specific width if necessary */
+        /* Example: width: 80%; to make them smaller */
+    }
+
+	.logo-1 {
+		width: 170px;
+	}
+
+	.logo-2 {
+		
+	}
+
+	.logo-3 {
+		
+	}
+
+	.logo-4 {
+		
+	}
+}
+
 /* Basic */
 
 	html {
